--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media screen and (min-width: 1440px) {
+    body {
+        background: url("./images/bg-desktop-dark.jpg") black no-repeat center;
+        background-size: cover;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@media screen and (min-width: 375px) {
+    body {
+        background: url("./images/bg-mobile-dark.jpg") black no-repeat center;
+        background-size: cover;
+    }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p {
+    margin: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+    border: none;
+    background-color: black;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 15px 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+    padding: 15px 32px;
+    margin: 15px 15px;
+    color: black;
+}
+
+.flex-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bk-div {
+    background: black;
+    width: 40%;
+    margin-left: 30%;
+    border-radius: 1%;
+}
+
+.space {
+    margin-bottom: 15px;
+}
+.check{
+
+}
+.cross {
+    scale: 0.4;
 }
